fix overflow

--- a/css/articleContent.css
+++ b/css/articleContent.css
@@ -68,5 +68,5 @@
 
 /* external */
 .articleContent .syntaxhighlighter {
-  padding: 0.5rem 0;
+  box-sizing: border-box;
 }
